2012-07-14  Petasis George  <petasis@iit.demokritos.gr>
	* unix/tkUnixSelect.c: Tests with Tcl_ThreadAlert(). It helps
	somewhat, but is not the solution for the problems when getting the
	selection.

2012-06-17  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.5 released.
	* win/TkDND_OleDND.cpp: Fixes for type CF_HDROP.

2012-06-07  Petasis George  <petasis@iit.demokritos.gr>
	* demos/basic.tcl: Updated demo with support for colours, which only
	works for XDND right now.

	* unix/TkDND_XDND.c:
	* unix/tkUnixSelect.c: Implementation of unix (XDND) drags completed.

2012-06-06  Petasis George  <petasis@iit.demokritos.gr>
	* unix/Cursors.c: Ported cursors from TkDND 1.x to TkDND 2.x

2012-06-05  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd.tcl:
	* library/tkdnd_unix.tcl:
	* unix/tkUnixSelect.c:
	* unix/TkDND_XDND.c: Added support for initiating drags from Tk under
	unix. Despite incomplete, seems to work with GTK.

2012-06-02  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_unix.tcl:
	* unix/TkDND_XDND.c:
	* unix/tkUnixSelect.c:
	* unix/tkSelect.h: Modifications to support Linux drops. Drops from
	GTK seem to always work, and drops from Qt seem to work most of the
	times.

2012-04-19  Petasis George  <petasis@iit.demokritos.gr>
	* win/Makefile: Updated the Windows Makefile, after a patch from
	Dave Bodenstab.

2012-04-12  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.4 released.
	* library/tkdnd_unix.tcl:
	* unix/TkDND_XDND.c:
	* unix/tkUnixSelect.c:
	* unix/tkSelect.h: Modifications to support Linux drops.

	* tclconfig/*:
	* configure.in, Makefile.in: Updated to TEA 3.9.

	* library/tkdnd_unix.tcl: Removed braces from a comment in
	xdnd::_GetDroppedData, left from testing with TIP 370 preliminary
	implementation. SF Bug ID: 3516862

2012-03-03  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.3 released.
	* library/tkdnd_windows.tcl:
	* win/OleDND.h:
	* win/TkDND_OleDND.cpp: Fix in TkDND_DropSource::QueryContinueDrag,